# libcma_binding_rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  STRUCTURE.md  build.rs  wrapper.h
.github/workflows/: test.yml
lib/cpp-build/include/cmt/: rollups.h
lib/cpp-build/include/libcma/: ffi.h
lib/cpp-build/lib/pkgconfig/: libcma.pc
rust-parser/: Cargo.toml
rust-parser/src/: helpers.rs  lib.rs  parser.rs  types.rs
rust-parser/tests/: parser_tests.rs
sample-applications/marketplace-js/: Dockerfile
sample-applications/marketplace-rs/: .gitignore
src/: error.rs  helpers.rs  ledger.rs  lib.rs  mocks.rs  parser.rs  types.rs
tests/: ledger_tests.rs  parser_tests.rs  parser_vectors.rs
