[package]
name = "cma-rust-parser"
version = "0.1.2"
edition = "2021"
description = "Rust utilities for parsing Cartesi inputs and generating vouchers"
license = "MIT"
repository = "https://github.com/Mugen-Builders/cma-rust-parser"
readme = "README.md"
keywords = ["cartesi", "rollups", "blockchain"]
categories = ["api-bindings", "cryptography"]

[lib]
name = "cma_rust_parser"
path = "src/lib.rs"

[dependencies]
ethers-core = "2.0.14"
hex = "0.4.3"
json = "0.12"
once_cell = "1.18"
