[package]
name = "libcma_binding_rust"
version = "0.1.3"
edition = "2021"
authors = ["Idogwu Chinonso idogwuchi@gmail.com"]
description = "Rust utilities for Cartesi applicaitons, functions as a plugin wallet lib for managing applicaiton assets and also a parser for encoding and decoding vouchers and applicaion inputs."
license = "MIT"
repository = "https://github.com/Mugen-Builders/libcma_binding_rust"
readme = "README.md"
keywords = ["cartesi", "rollup", "ledger", "parser", "blockchain"]
categories = ["api-bindings", "cryptography", "blockchain"]

[lib]
name = "libcma_binding_rust"
path = "src/lib.rs"

[dependencies]
hex = "0.4"
lazy_static = { version = "1.4", optional = true }
json = "0.12"
once_cell = "1.18"
ethers-core = "1.0.0"

[build-dependencies]
bindgen = "0.69"

[features]
default = ["native"]
native = ["lazy_static"] # Mac testing with mocks
riscv64 = []             # Cross-build later
